[package]
name = "fio-results"
version = "0.1.0"
edition = "2024"
authors = ["Adam Flott <adam@adamflott.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamflott/fio-results"
description = "JSON parser for fio test results"
homepage = "https://github.com/adamflott/fio-results"

[dependencies]
bytesize = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"]}
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
serde_with = "3.14.0"
thiserror = "2.0.16"